--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -85,3 +85,27 @@
     font-weight: 700;
     text-decoration: none;
 }
+
+@media screen and (min-width: 1024px) {
+    .carousel__title {
+        font-size: 26px;
+    }
+
+    .swiper-pagination {
+        margin: 3em 0 2em 0;
+    }
+
+    .swiper {
+        width: 60%;
+    }
+
+    .swiper-button-prev, .swiper-button-next {
+        /* display: block; */
+        /* top: 60%; */
+    }
+
+    .card {
+        width: 50%;
+        margin: 3em auto;
+    }
+}
