--- a/styles/contact.css
+++ b/styles/contact.css
@@ -37,3 +37,30 @@
     background-position: 1em;
     padding-left: 3.5em;
 }
+
+@media screen and (min-width: 1024px) {
+    .contact {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 3em;
+    }
+
+    .contact__description {
+        margin-right: 3em;
+        width: 30%;
+    }
+
+    .contact__title {
+        font-size: 24px;
+        line-height: 36px;
+    }
+    
+    .contact__text {
+        line-height: 24px;
+    }
+
+    .contact__email {
+        width: 30%;
+    }
+}
