--- a/styles/footer.css
+++ b/styles/footer.css
@@ -7,3 +7,45 @@ hr {
     padding: 1.5em;
 }
 
+.list-footer {
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+    .footer {
+        display: flex;
+        justify-content: space-around;
+        padding: 4em 0;
+    }
+
+    .footer__title {
+        font-size: 24px;
+        font-weight: 400;
+    }
+
+    .list-footer {
+        display: block;
+    }
+
+    .list-footer__item {
+        display: flex;
+        align-items: center;
+        margin: 1em 0;
+    }
+
+    .list-footer__link {
+        color: var(--grey-dark);
+        text-decoration: none;
+        margin-left: 0.6em;
+        font-size: 14px;
+        font-weight: 400;
+    }
+
+    .list-footer__title {
+        color: var(--grey-medium);
+        font-size: 14px;
+        font-weight: 400;
+        text-transform: uppercase;
+        margin-bottom: 2em;
+    }
+}
