--- a/styles/header.css
+++ b/styles/header.css
@@ -34,3 +34,24 @@
     background: url(../img/search.svg) no-repeat;
     background-position: 1em;
 }
+
+@media screen and (min-width: 1024px) {
+    .header {
+        padding: 5em 2em;
+    }
+
+    .header__title {
+        font-size: 36px;
+    }
+
+    .header__text {
+        margin: 1em 0 2em 0;
+    }
+
+    .header__search {
+        width: 50%;
+    }
+    .header__search::placeholder {
+        background-position: 6em;
+    }
+}
