--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
+    padding: 0 0.5em;
 }
 
 .container {
@@ -29,7 +30,7 @@
 }
 
 .list-menu__title, .list-menu__item {
-    padding: 1.5em;
+    padding: 1em;
     background-color: var(--white);
 }
 
@@ -57,3 +58,67 @@
     padding: 1em;
 }
 
+.container__title {
+    display: none;
+}
+
+.options {
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+    .navbar {
+        padding: 0 3em;
+    }
+
+    .container__title, .container__title-bold {
+        font-family: var(--font-secondary);
+        font-size: 30px;
+    }
+
+    .container__title {
+        display: block;
+        margin-top: 0.5em;
+        font-weight: 400;
+    }
+
+    .container__title-bold {
+        font-weight: 700;
+    }
+
+    .options {
+        display: flex;
+    }
+
+    .options__item {
+        padding: 0 1em;
+        text-transform: uppercase;
+    }
+
+    .options__link {
+        text-decoration: none;
+        color: var(--black);
+    }
+
+    .container__image-transparent {
+        display: none;
+    }
+
+    .nav__hamburguer-menu {
+        display: none;
+    }
+
+    .options__button:checked ~ .list-menu{
+        display: block;
+        width: auto;
+    }
+
+    .options__button {
+        display: none;
+    }
+
+    .list-menu__item {
+        padding: 1.2em;
+    }
+
+}
