--- a/styles/topics.css
+++ b/styles/topics.css
@@ -1,7 +1,7 @@
 .topics {
     background: var(--blue-gradient);
     text-align: center;
-    padding: 1em 0.5em;
+    padding: 1em 0.6em;
 }
 
 .topics__title {
@@ -28,4 +28,23 @@
     text-decoration: none;
     font-size: 14px;
     font-weight: 700;
+}
+
+@media screen and (min-width: 1024px) {
+    .topics__title {
+        font-size: 24px;
+    }
+
+    .topics__list {
+        width: 70%;
+        margin: 0 auto;
+    }
+
+    .topics__item {
+        margin: 2em 0.6em;
+    }
+
+    .topics__link {
+        font-size: 18px;
+    }
 }
