--- a/styles/contact.css
+++ b/styles/contact.css
@@ -38,7 +38,7 @@
     padding-left: 3.5em;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
     .contact {
         display: flex;
         justify-content: center;
@@ -60,6 +60,12 @@
         line-height: 24px;
     }
 
+    .contact__email {
+        width: 40%;
+    }
+}
+
+@media screen and (min-width: 1400px) {
     .contact__email {
         width: 30%;
     }
