--- a/styles/footer.css
+++ b/styles/footer.css
@@ -49,3 +49,14 @@ hr {
         margin-bottom: 2em;
     }
 }
+
+@media screen and (min-width: 1400px) {
+    .footer {
+        padding: 4em 9vw;
+    }
+
+    .list-footer {
+        border-left: 1px solid var(--grey-medium);
+        padding-left: 1.5em;
+    }
+}
