--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -66,7 +66,11 @@
     display: none;
 }
 
-@media screen and (min-width: 1024px) {
+.container__text {
+    display: none;
+}
+
+@media screen and (min-width: 900px) {
     .navbar {
         padding: 0 3em;
     }
@@ -78,7 +82,7 @@
 
     .container__title {
         display: block;
-        margin-top: 0.5em;
+        margin-top: 0.3em;
         font-weight: 400;
     }
 
@@ -120,5 +124,25 @@
     .list-menu__item {
         padding: 1.2em;
     }
+}
 
+@media screen and (min-width: 1400px) {
+    .container__link {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--black);
+    }
+
+    .container__text {
+        display: block;
+    }
+
+    .options {
+        margin-right: auto;
+    }
+
+    .container__title {
+        margin-right: 2em;
+    }
 }
