--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -90,6 +90,10 @@
     text-decoration: none;
 }
 
+.buttons__anchor:hover {
+    background: var(--blue-gradient);
+    }
+
 @media screen and (min-width: 768px) {
     .carousel__title {
         font-size: 26px;
